--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
- background: url('black_grad.png') #112 repeat-x;
+ background: #223;
  margin: 0;
  text-align: center; 
 }
 
 #main  {
 text-align: left; 
- margin: 10% 4%;
+ margin: 8% 4%;
  width: 92%;
  max-width: 2024px;
 }
@@ -20,6 +20,7 @@ text-align: left;
 h1, h2, h3 {
  color: #eee;
  font-family: "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+ text-shadow: 1px 1px 1px #000;
  
 }
 h1 {
@@ -85,7 +86,7 @@ p {
   margin-right: 2%;
   padding-right: 2%;
   float: left;
-  border-right: 1px dotted #363;
+  border-right: 1px dotted #666;
   line-height: 130%;
 }
 
@@ -96,7 +97,6 @@ p {
     margin-right: 2%;
     padding-right: 2%;
     float: left;
-    border-right: 1px dotted #363;
     margin-bottom: 20px;
 
   }
@@ -114,7 +114,7 @@ p {
     margin-right: 2%;
     padding-right: 2%;
     float: none;
-    border-bottom: 1px dotted #363;
+    border-bottom: 1px dotted #666;
     border-right: none;
     padding-bottom: 20px;
   }
