--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ text-align: left;
 #intro-wrapper {
   width: 100%;
   margin: 0;
+  padding: 4px 0;
 }
 
 h1, h2, h3 {
@@ -35,6 +36,9 @@ h2 {
   margin-top: 0px;
   font-weight: normal;
   letter-spacing: -0.1em;  
+}
+h3 {
+ font-size: 14px;
 }
 a, a:active, a:visited {
 
@@ -71,7 +75,7 @@ font: 60% "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
 #contents {
 padding-top:0px;
 
-font: 90% "Helvetica", "Helvetica Neue", Verdana, sans-serif;
+font: 13px "Helvetica", "Helvetica Neue", Verdana, sans-serif;
 
 }
 
