--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot?-dd0xzo');
+  src:url('fonts/icomoon.eot?#iefix-dd0xzo') format('embedded-opentype'),
+    url('fonts/icomoon.woff?-dd0xzo') format('woff'),
+    url('fonts/icomoon.ttf?-dd0xzo') format('truetype'),
+    url('fonts/icomoon.svg?-dd0xzo#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
  background: url('./images/bg.jpg');
  background-size: 2000px auto;
@@ -142,4 +153,41 @@ padding-right: 0px;
   border-right: none;
 }
 
+
+
+[class^="icon-"], [class*=" icon-"] {
+
+}
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  margin-right: 7px;
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-phone:before {
+  content: "\e600";
+}
+.icon-mail:before {
+  content: "\e601";
+}
+.icon-book:before {
+  content: "\e602";
+}
+.icon-twitter:before {
+  content: "\e603";
+}
+.icon-linkedin:before {
+  content: "\e604";
+}
+.icon-skype:before {
+  content: "\e605";
+}
   
