--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -13,7 +13,10 @@ $visual-grid-index: front; // Show grid behind content (back) or overlay it over
 
 // Post-Framework Imports/Overrides ------ //
 // Media Query Breakpoints
-$mobile: new-breakpoint(max-width 600px 4); // Use a 4 column grid
-$tablet: new-breakpoint(min-width 601px max-width 889px); // We're back on a 12 col grid from here up.
-$laptop: new-breakpoint(min-width 890px max-width 1399px);
-$desktop: new-breakpoint(min-width 1400px);
+
+
+//$medium-screen: em(640);
+//$large-screen: em(860);
+
+//$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
+//$large-screen-up: new-breakpoint(min-width $large-screen 8);
