--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -31,6 +31,12 @@
   border: 1px solid #ccc;
   margin-bottom: 20px;
   position: relative;
+  transition: all 0.3s;
+  &:hover {
+    box-shadow: 0px 0px 10px #333;
+    transform: scale(1.05, 1.05);
+    background: #fff;
+  };
 }
 /*
 .card-image {
