--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -1,3 +1,13 @@
+h4.cases {
+  margin: 40px auto;
+  text-align: center;
+  text-transform: uppercase;
+}
+#cases {
+  p, h4 {
+    text-shadow: 0px 0px 10px #000;
+  }
+}
 .card-wrapper {
    @include outer-container;
      position: relative;
@@ -54,6 +64,9 @@
 
 .card-copy {
   font-size: $base-font-size * 0.70;
+  @include media($small) {
+    font-size: $base-font-size * 0.85;
+  }
   width: 100%;
   line-height: 1.25;
   padding: 8px 10px;
@@ -65,6 +78,9 @@
   color: #eee;
   height: 30px;
   font-size: $base-font-size * 0.75;
+  @include media($small) {
+    font-size: $base-font-size * 0.90;
+  }
   text-align: center;
   padding: 5px 0;
   a {
