--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,10 +34,10 @@ body {
   }
   @include media($small) {
     h1 {
-      font-size: $h1-font-size * 1.0;
+      font-size: $h1-font-size * 0.9;
     }
     h2 {
-      font-size: $h2-font-size * 0.8;
+      font-size: $h2-font-size * 0.7;
     }
   }
   .links {
@@ -61,6 +61,7 @@ body {
         margin-top: 5px;
         margin-right: none;
         display: block;
+        font-size: $base-font-size * .9;
       }
     }
     
@@ -101,15 +102,27 @@ body.welcome-hidden #intro-wrapper::after {
 
 #intro-wrapper::after {
     display: block;
-    font-size: 50px;
+    font-size: 70px;
     content: '﹀';
     position: absolute;
     width: 120px;
     left: 50vw;
     margin-left: -60px;
-    bottom: 15px;
+    bottom: 50px;
     animation: pulsate 1s linear 0s infinite alternate;
+    
 }
+@media only screen and (max-height : 390px) {
+ #intro-wrapper::after {
+   display: none;
+ }
+}
+@media only screen and (min-width : 600px) and (max-height : 570px) {
+ #intro-wrapper::after {
+   display: none;
+ }
+}
+
 @keyframes pulsate {
     from { opacity: 0.2; }
     to { opacity: 0.8; }
