--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,4 +1,5 @@
-$sans-serif: Arial;
-$base-font-size: 12px;
-$h1-font-size: 28px;
+$copy-font: Raleway;
+$header-font: Oswald;
+$base-font-size: 18px;
+$h1-font-size: 42px;
 $h2-font-size: 20px;
