--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -2,81 +2,77 @@ h4.cases {
   margin: 40px auto;
   text-align: center;
   text-transform: uppercase;
+  font-family: Oswald;
+  font-size: $base-font-size * 3;
+  line-height: $base-font-size * 4;
 }
 #cases {
   p,
   h4 {
-    text-shadow: 0px 0px 10px #000;
+    //text-shadow: 0px 0px 10px #000;
   }
 }
+
+.cards {
+}
+
 .card-wrapper {
-  position: relative;
-  margin-top: 30px;
+  margin-top: 40px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 100%;
 }
 .card {
   min-height: 150px;
-  font-family: $sans-serif;
-  width: 48%;
-  margin-left: 0%;
-  margin-right: 2%;
-  &:nth-child(even) {
-    margin-right: 0%;
-    margin-left: 2%;
-  }
+  flex: 0 1 calc(50% - 60px);
+  padding: 20px;
   @media (max-width: 350px) {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    &:nth-child(even) {
-      margin-right: 0;
-      margin-left: 0;
-    }
+    flex: 100%;
   }
-  float: left;
-  border: 1px solid #000;
-  background: rgba(6, 12, 24, 0.9);
-  overflow: hidden;
-  max-height: 150px;
+
+  border: 1px solid #ddd;
+  background: #eee;
+
   margin-bottom: 20px;
-  position: relative;
+
   transition: all 0.3s;
   &:hover {
-    transform: scale(1.02, 1.02);
+    //transform: scale(1.01, 1.01);
   }
 }
-/*
-.card-image {
-  top: 25px;
-  position: relative;
-  visibility: hidden;
-}*/
 
 .card-header {
   width: 100%;
 }
 
 .card-copy {
-  font-size: $base-font-size * 0.7;
+  font-size: $base-font-size * 0.8;
   @media (max-width: 350px) {
     font-size: $base-font-size * 0.85;
   }
   width: 100%;
   line-height: 1.25;
   padding: 8px 10px;
-  color: #ccc;
+  color: #333;
+  font-family: $copy-font;
 }
 
 .card h5 {
-  font-family: $sans-serif;
-  color: #eee;
+  font-family: $header-font;
+  color: #333;
   height: 35px;
-  font-size: $base-font-size * 0.75;
+  margin: 0;
+  font-size: $base-font-size * 1.2;
+
   @media (max-width: 350px) {
-    font-size: $base-font-size * 0.9;
+    font-size: $base-font-size * 0.1;
   }
   text-align: center;
   padding: 10px 0;
   a {
-    color: #fff;
+    color: #333;
+    text-decoration: none;
   }
 }
