--- a/styles/main.scss
+++ b/styles/main.scss
@@ -151,3 +151,14 @@ body.welcome-hidden #intro-wrapper::after {
     opacity: 0.8;
   }
 }
+#main {
+  position: relative;
+  z-index: 1;
+}
+#canvas {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 0;
+}
