--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -16,6 +16,7 @@
   min-height: 100vh;
   align-content: center;
   justify-content: center;
+  position: relative;
   /*position: fixed;
   height: 100vh;
   width: 100%;
