--- a/scripts/pointer.scss
+++ b/scripts/pointer.scss
@@ -25,7 +25,7 @@ $cursorSize: 12px;
   top: ($cursorSize / 2) * -1;
   border-radius: 50%;
   z-index: 11000;
-  background: #f0f;
+  background: #dd0000;
 }
 
 #inner-cursor.pulse {
